compiler-core/src/erlang/snapshots/rakun_core__erlang__tests__keyword_constructors.snap
---
source: compiler-core/src/erlang/tests.rs
assertion_line: 507
expression: "pub record X { Div }"
---
----- SOURCE CODE
pub record X { Div }

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export_type([x/0]).

-type x() :: 'div'.
