compiler-core/src/erlang/snapshots/rakun_core__erlang__tests__keyword_constructors1.snap
---
source: compiler-core/src/erlang/tests.rs
expression: "pub record X { Fun(Int) }"
---
----- SOURCE CODE
pub record X { Fun(Int) }

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export_type([x/0]).

-type x() :: {'fun', integer()}.
